2006-07-13  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c (fill_gpval_string): Do not risk calling gpfree_string
	on uninitialized udv.

	* src/eval.c (update_gpval_variables): Treat GPVAL_TERM just like all
	the other GPCAL_* variables.

2006-07-12  Ethan A Merritt <merritt@u.washington.edu>

	* configure.in:  Enable HIDDEN3D_QUADTREE by default.

	* term/post.trm (PS_linetype): Additional optimization from not
	forced an absolute move if the linetype change has been optimized away.

	* term/pslatex.trm (EPSLATEX_linetype): Step back from over-general test
	for unnecessary linetype change.  Forward it to PS_linetype for the
	actual decision. Without this, a pure linewidth change or a pure
	dash style change are incorrectly ignored.
	Bugfix.

2006-07-12  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* demo/Makefile.am.in:
	* demo/random.dem:
	* demo/vector.dem:
	Rename temporary *.dat files to *.tmp to prevent them to be included by
	'make dist'.

2006-07-11  Ethan A Merritt <merritt@u.washington.edu>

	* term/pslatex.trm (EPSLATEX_set_color): Restore support for color
	text set using fractional palette values. If the terminal is in mono
	mode, or has the blacktext option, the fractional text color remains
	a pure grayscale.
	Bug #1517932

2006-07-11  Per Persson  <persquare@mac.com>

	* term/aquaterm.trm: Made aqua terminal respect font requests of the
	form: font "<fontface>{,<fontsize>}", old syntax still supported too. 
	
2006-07-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw config/makefile.nt: #define
	EAM_OBJECTS and HIDDEN3D_VAR_PTSIZE.

2006-07-10  Ethan A Merritt <merritt@u.washington.edu>

	* demo/mouselabels.dem demo/mouselab_1.dem demo/mouselab_2.dem:
	New demo using GPVAL_* variables and mouse/keystroke interaction to
	achieve interactive placement of plot labels. Tested for x11 and wxt.

	* demo/mousevariables.dem demo/keystroke.dem(removed): 