@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: eval.c,v 1.44 2006/07/14 00:07:42 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: eval.c,v 1.45 2006/07/14 00:30:41 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - eval.c */
@@ -759,7 +759,7 @@ update_gpval_variables(int from_plot_command)
 	fill_gpval_axis(V_AXIS);
     }
 
-    fill_gpval_string("GPVAL_TERM", term->name);
+    fill_gpval_string("GPVAL_TERM", (char *)(term->name));
     fill_gpval_string("GPVAL_TERMOPTIONS", term_options);
     fill_gpval_string("GPVAL_OUTPUT", (outstr) ? outstr : "");
 
